2006-04-21  Christopher Faylor  <cgf@timesys.com>

	* environ.cc (rawenv): Make this variable a file-scope static.
	(getearly): Rename 's' variable to 'len' since 's' is used fairly
	consistently throughout cygwin as a string variable.  Remove rawenv
	declaration.  Perform other minor cleanups.
	(environ_init): Remove rawenv declaration.  Only set rawenv to
	GetEnvironmentStrings() if it has not already been set.  Properly free
	rawenv in all cases.

2006-04-21  Christopher Faylor  <cgf@timesys.com>

	* tty.h (tty::hwnd): Move to tty_min.
	(tty::gethwnd): Ditto.
	(tty::sethwnd): Ditto.
	(tty_min::hwnd): Receive variable from tty class.
	(tty_min::gethwnd): Receive function from tty classs.
	(tty_min::sethwnd): Ditto.
	* dtable.cc (dtable::stdio_init): Only call init_console_handler when
	we actually own the console.
	* fhandler_console.cc (fhandler_console::get_tty_stuff): Set tty's hwnd
	to non-zero value.
	* fhandler_termios.cc (fhandler_termios::tcsetpgrp): Semi-reinstate
	handling of console when pgrp is set.

2006-04-21  Pierre Humblet  <Pierre.Humblet@ieee.org>
	    Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (getearly): New function.
	(findenv_func): New function pointer, predefined to getearly.
	(getenv): Call findenv function over the findenv_func pointer.
	(environ_init): Change findenv_func pointer to my_findenv after Cygwin
	environment is initialized.

2006-04-21  Lars Munch  <lars@segv.dk>

	* include/asm/byteorder.h (__ntohl): Fix the missing uint32_t.

2006-04-21  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::wait): Reorder setting
	WSAError to avoid spurious errors with WSAError set to 0.

2006-04-21  Corinna Vinschen  <corinna@vinschen.de>

	* include/asm/byteorder.h: Include stdint.h.  Per standard, change
	datatypes in ntohX and htonX functions to uintXX_t types.

2006-04-18  Christopher Faylor  <cgf@timesys.com>

	* exceptions.cc (ctrl_c_handler): Only exit TRUE on CTRL_LOGOFF_EVENT